--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             RETAILERS
         </div>
         <div id="build">
-            BUILD
+            BUILDS
         </div>
     </div>
     <div>
