--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="landrover">
-    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="configurator-image-reduction" content="l460,l461,l551,l560,l663,l462,l550">
     <title name="title">Defender | Embrace the Impossible. Since 1948. | Unstoppable 4x4 Vehicles&nbsp;</title>
     <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/020/499/554/non_2x/land-rover-brand-logo-car-symbol-black-design-british-automobile-illustration-free-vector.jpg" type="image/x-icon"> 
