--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="title" content="Defender | Embrace the Impossible. Since 1948. | Unstoppable 4x4 Vehicles&nbsp;">
-    <meta name="description" content="The most iconic and capable 4x4s. Discover the full range now, each offering unique personality and features. Explore Defender today.">
-    <meta property="og:image" content="https://www.landrover.in/content/dam/lrdx/global/l663/25my/int/L66325GL_303103289_DX_OCTA_HEADER_15_16x9_H264_4K_STILL.jpg">
-    <meta property="og:description" content="The most iconic and capable 4x4s. Discover the full range now, each offering unique personality and features. Explore Defender today.">
+    <meta name="description"
+        content="The most iconic and capable 4x4s. Discover the full range now, each offering unique personality and features. Explore Defender today.">
+    <meta property="og:image"
+        content="https://www.landrover.in/content/dam/lrdx/global/l663/25my/int/L66325GL_303103289_DX_OCTA_HEADER_15_16x9_H264_4K_STILL.jpg">
+    <meta property="og:description"
+        content="The most iconic and capable 4x4s. Discover the full range now, each offering unique personality and features. Explore Defender today.">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="landrover">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1">
     <meta name="configurator-image-reduction" content="l460,l461,l551,l560,l663,l462,l550">
     <title name="title">Defender | Embrace the Impossible. Since 1948. | Unstoppable 4x4 Vehicles&nbsp;</title>
-    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/020/499/554/non_2x/land-rover-brand-logo-car-symbol-black-design-british-automobile-illustration-free-vector.jpg" type="image/x-icon"> 
+    <link rel="icon"
+        href="https://static.vecteezy.com/system/resources/previews/020/499/554/non_2x/land-rover-brand-logo-car-symbol-black-design-british-automobile-illustration-free-vector.jpg"
+        type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
@@ -23,6 +28,14 @@
 
 
 <body>
+    <div id="altnavbar">
+        <div id="menu">
+            ☰MENU
+        </div>
+        <div id="althead">
+            <img src="defender logo.png">
+        </div>
+    </div>
     <div id="navbar">
         <div id="vehicle">
             VEHICLES
@@ -36,18 +49,21 @@
         <div id="shop">
             SHOP NOW
         </div>
+
         <div id="logo">
-            <img src="defender logo.png" alt="logo" height="60">
+            <img src="defender logo.png" alt="logo">
         </div>
+
         <div id="retail">
             RETAILERS
         </div>
         <div id="build">
             BUILDS
         </div>
+
     </div>
-    <div>
-        <img id="header" src="main.jpeg" alt="front defender" height="700">
+    <div id="header">
+        <img src="main.jpeg" alt="front defender">
     </div>
     <div id="overimage">
         <div id="over-text">
@@ -60,7 +76,7 @@
         </div>
     </div>
     <div id="initial">
-        <div class="int" id="o8">
+        <div class="int">
             <img src="defender octa.png" alt="defender OCTA" height="200">
             <h3>
                 <div class="name1">
@@ -89,7 +105,7 @@
             </h3>
         </div>
 
-        <div class="int" id="int130">
+        <div class="int">
             <img src="defender 130.png" alt="defender 130" height="200">
             <h3>
                 <div class="name1">
@@ -120,7 +136,7 @@
             </h3>
         </div>
 
-        <div class="int" id="110">
+        <div class="int">
             <img src="defender 110.png" alt="defender 110" height="200">
             <h3>
                 <div class="name1">
@@ -149,7 +165,7 @@
             </h3>
         </div>
 
-        <div class="int" id="90">
+        <div class="int">
             <img src="defender 90.png" alt="defender 90" height="200">
             <h3>
                 <div class="name1">
@@ -180,12 +196,12 @@
         </div>
     </div>
     <div id="defocta">
-        <img src="main defender octa.png" alt="main defender OCTA" height="600">
+        <div class="main-img">
+            <img src="main defender octa.png" alt="main defender OCTA">
+        </div>
         <div class="maindetails1">
             <div class="mainname">
-
                 DEFENDER OCTA
-
             </div>
             <div class="det">
                 <span>The master of extreme performance.</span>
@@ -210,39 +226,42 @@
         </div>
     </div>
 
-    <div id="def130">
-        <div class="maindetails2">
-            <div class="mainname">
-                <span>DEFENDER 130</span>
+    <div class="wrapper">
+        <div id="def130">
+            <div class="maindetails2">
+                <div class="mainname">
+                    <span>DEFENDER 130</span>
+                </div>
+                <div class="det">
+                    <span>Freedom for all. Eight seats for bigger exploration.</span>
+                    <h3>
+                        <div>
+                            <span>
+                                <a href="https://www.landrover.in/defender/defender-130/index.html" class="explore">
+                                    → EXPLORE
+                                </a>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <a href="https://buildyour.landrover.in/lr/en_in/l663_k255/4c3s1/a-130_a-xdyn-hse/ipr/personalise/model/?_gl=1*sxh39l*_gcl_aw*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_dc*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_au*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*FPAU*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*_ga*MTY2NTI1Nzc3MS4xNzQ0NzExMTEw*_ga_SZ75ZYT5R1*MTc0NDk2NjMyNi42LjEuMTc0NDk2Njg3OC4wLjAuNjQ5NTAxNjE4*_fplc*aGR0QnNMV0hiJTJCWVJCeHg5RklhWGVzJTJGZ2x5Wm0xNCUyQk05eGR6enFZWWl3cVJnOXRzMXRGT1FIN0hJSTBzRnRrclBUNnc3RjVkN1A2T1N2dGJYa1JyUWV2OWVaJTJCM1dnWldDZEs5Z3NPN2lSR0lpY1FwTmMlMkJlZXBaRGJXdmxTZyUzRCUzRA.."
+                                    class="byo">
+                                    > BUILD YOUR OWN
+                                </a>
+                            </span>
+                        </div>
+                    </h3>
+                </div>
             </div>
-            <div class="det">
-                <span>Freedom for all. Eight seats for bigger exploration.</span>
-                <h3>
-                    <div>
-                        <span>
-                            <a href="https://www.landrover.in/defender/defender-130/index.html" class="explore">
-                                → EXPLORE
-                            </a>
-                        </span>
-                    </div>
-                    <div>
-                        <span>
-                            <a href="https://buildyour.landrover.in/lr/en_in/l663_k255/4c3s1/a-130_a-xdyn-hse/ipr/personalise/model/?_gl=1*sxh39l*_gcl_aw*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_dc*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_au*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*FPAU*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*_ga*MTY2NTI1Nzc3MS4xNzQ0NzExMTEw*_ga_SZ75ZYT5R1*MTc0NDk2NjMyNi42LjEuMTc0NDk2Njg3OC4wLjAuNjQ5NTAxNjE4*_fplc*aGR0QnNMV0hiJTJCWVJCeHg5RklhWGVzJTJGZ2x5Wm0xNCUyQk05eGR6enFZWWl3cVJnOXRzMXRGT1FIN0hJSTBzRnRrclBUNnc3RjVkN1A2T1N2dGJYa1JyUWV2OWVaJTJCM1dnWldDZEs5Z3NPN2lSR0lpY1FwTmMlMkJlZXBaRGJXdmxTZyUzRCUzRA.."
-                                class="byo">
-                                > BUILD YOUR OWN
-                            </a>
-                        </span>
-                    </div>
-                </h3>
+
+            <div class="main-img">
+                <img src="main defender 130.png" alt="main defender 130" height="600">
             </div>
-        </div>
-        <div class="main-img">
-            <img src="main defender 130.png" alt="main defender 130" height="600">
         </div>
     </div>
 
     <div id="def110">
-        <div>
+        <div class="main-img">
             <img src="main defender 110.png" alt="main defender 110" height="600">
         </div>
         <div class="maindetails1">
@@ -272,35 +291,36 @@
         </div>
     </div>
 
-    <div id="def90">
-        <div class="maindetails2">
-            <div class="mainname">
-                <span>DEFENDER 90</span>
+    <div class="wrapper">
+        <div id="def90">
+            <div class="maindetails2">
+                <div class="mainname">
+                    <span>DEFENDER 90</span>
+                </div>
+                <div class="det">
+                    <span>Defender in its purest form. Endless possiblities await.</span>
+                    <h3>
+                        <div>
+                            <span>
+                                <a href="https://www.landrover.in/defender/defender-90/index.html" class="explore">
+                                    → EXPLORE
+                                </a>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <a href="https://buildyour.landrover.in/lr/en_in/l663_k255/4c3s1/a-90_a-xdyn-hse/ipr/personalise/bodystyle/?_gl=1*o21aif*_gcl_aw*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_dc*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_au*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*FPAU*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*_ga*MTY2NTI1Nzc3MS4xNzQ0NzExMTEw*_ga_SZ75ZYT5R1*MTc0NDk2NjMyNi42LjEuMTc0NDk2NzE4NS4wLjAuNjQ5NTAxNjE4*_fplc*bTV0VnhBaU8wbVU0cWVXR0xoVUF5OHpOaENRbGJQYnlWcXg2NUxGQVNrMG9lJTJGTGNJVmUyc0hQNTRXOFgxWjFoayUyRkMlMkYlMkZqWHhHdmlNbW1CMzBUS25rdFdzUGRLSVFRMk1scEpXVGt5eUJwNFU2U1RKdk1DZk9CUmYzNnluSlElM0QlM0Q."
+                                    class="byo">
+                                    > BUILD YOUR OWN
+                                </a>
+                            </span>
+                        </div>
+                    </h3>
+                </div>
             </div>
-            <div class="det">
-                <span>Defender in its purest form. Endless possiblities await.</span>
-                <h3>
-                    <div>
-                        <span>
-                            <a href="https://www.landrover.in/defender/defender-90/index.html" class="explore">
-                                → EXPLORE
-                            </a>
-                        </span>
-                    </div>
-                    <div>
-                        <span>
-                            <a href="https://buildyour.landrover.in/lr/en_in/l663_k255/4c3s1/a-90_a-xdyn-hse/ipr/personalise/bodystyle/?_gl=1*o21aif*_gcl_aw*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_dc*R0NMLjE3NDQ3MTExNTUuQ2owS0NRandoX2lfQmhDekFSSXNBTmltZW9GbXZGb0lfVXpkekZrNEN0b3d2WW1jenB2dUlaRG5MM3ktYkdUb2xsU3lGM1g3MFlvNFlnb2FBcW5uRUFMd193Y0I.*_gcl_au*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*FPAU*MTI2OTUzNzg3NS4xNzQ0NzExMTA5*_ga*MTY2NTI1Nzc3MS4xNzQ0NzExMTEw*_ga_SZ75ZYT5R1*MTc0NDk2NjMyNi42LjEuMTc0NDk2NzE4NS4wLjAuNjQ5NTAxNjE4*_fplc*bTV0VnhBaU8wbVU0cWVXR0xoVUF5OHpOaENRbGJQYnlWcXg2NUxGQVNrMG9lJTJGTGNJVmUyc0hQNTRXOFgxWjFoayUyRkMlMkYlMkZqWHhHdmlNbW1CMzBUS25rdFdzUGRLSVFRMk1scEpXVGt5eUJwNFU2U1RKdk1DZk9CUmYzNnluSlElM0QlM0Q."
-                                class="byo">
-                                > BUILD YOUR OWN
-                            </a>
-                        </span>
-                    </div>
-                </h3>
+            <div class="main-img">
+                <img src="main defender 90.png" alt="main defender 90" height="600">
             </div>
-        </div>
-        <div>
-            <img src="main defender 90.png" alt="main defender 90" height="600">
-
         </div>
     </div>
     <table id="comparision" border="1">
@@ -567,54 +587,64 @@
 
     </table>
 
-    <div>
+    <div btdn class="btdn">
         <h1>
             Book a Test-Drive Now!
         </h1>
     </div>
     <div id="Book-test-drive">
         <form id="detail-form">
-            <div id="PI" class="form-group">
-                <label>1. PERSONAL INFORMATION</label><br>
-                <div>
-                    <input type="email" id="Email-address" name="Email-address" required placeholder="Email-address *">
-                    <input type="number" id="Moblie-number" name="Moblie-number" required placeholder="Moblie-number *">
+            <div class="wrapper">
+                <div id="PI" class="form-group">
+                    <label>1. PERSONAL INFORMATION</label>
+
+                    <div>
+                        <input type="email" id="Email-address" name="Email-address" required
+                            placeholder="Email-address *">
+                        <input type="number" id="Moblie-number" name="Moblie-number" required
+                            placeholder="Moblie-number *">
+                    </div>
+                    <input type="text" id="First-name" name="First-name" required placeholder="First-name *">
+                    <input type="text" id="Last-name" name="Last-name" required placeholder="Last-name *">
                 </div>
-                <input type="text" id="First-name" name="First-name" required placeholder="First-name *">
-                <input type="text" id="Last-name" name="Last-name" required placeholder="Last-name *">
             </div>
-            <div id="TD" class="form-group">
-                <label>2. TEST DRIVE</label><br>
-                <label>Which model are you interested in? </label><br>
-                <input type="checkbox" id="DO" name="DO" value="Car">
-                <label for="DO" class="ch">Defender Octa</label>
-                <input type="checkbox" id="D90" name="D90" value="Car">
-                <label for="D90" class="ch">Defender 90</label><br>
-                <input type="checkbox" id="D110" name="D110" value="Car">
-                <label for="D110" class="ch">Defender 110</label>
-                <input type="checkbox" id="D130" name="D130" value="Car">
-                <label for="D110" class="ch">Defender 130</label>
-            </div>
-            <div id="PR" class="form-group">
-                <label>3. PREFFERED RETAILER</label><br>
-                <label>Please enter a postcode, city or town and select a local Retailer</label><br>
-                <input type="number" name="PR" id="PR" required placeholder="Postcode, City or Town">
-            </div>
-            <div id="consent" class="form-group">
-                <label>4. CONSENT</label><br>
-                <label for="cs">
-                    <input type="checkbox" id="cs" name="cs" required>
-                    I agree with terms *
-                </label>
-            </div>
-            <div id="OE" class="form-group">
-                <label>5. OTHER ENQUIRIES</label><br>
-                <textarea rows="2" name="OE" placeholder="Additional Information / Enquiry"></textarea>
-            </div>
-            <div class="form-group" id="Book">
-                <input type="submit" value="Book">
-            </div>
-        </form>
+    </div>
+    <div id="TD" class="form-group">
+        <label>2. TEST DRIVE</label><br>
+        <label>Which model are you interested in? </label><br>
+        <input type="checkbox" id="DO" name="DO" value="Car">
+        <label for="DO" class="ch">Defender Octa</label>
+        <input type="checkbox" id="D90" name="D90" value="Car">
+        <label for="D90" class="ch">Defender 90</label><br>
+        <input type="checkbox" id="D110" name="D110" value="Car">
+        <label for="D110" class="ch">Defender 110</label>
+        <input type="checkbox" id="D130" name="D130" value="Car">
+        <label for="D110" class="ch">Defender 130</label>
+    </div>
+    <div class="wrapper">
+        <div id="PR" class="form-group">
+            <label>3. PREFFERED RETAILER</label><br>
+            <label>Please enter a postcode, city or town and select a local Retailer</label><br>
+            <input type="number" name="PR" required placeholder="Postcode, City or Town">
+        </div>
+    </div>
+    <div id="consent" class="form-group">
+        <label>4. CONSENT</label><br>
+        <label for="cs">
+            <input type="checkbox" id="cs" name="cs" required>
+            I agree with terms *
+        </label>
+    </div>
+    <div class="wrapper">
+    <div id="OE" class="form-group">
+        <label>5. OTHER ENQUIRIES</label><br>
+        <textarea rows="2" name="OE" placeholder="Additional Information / Enquiry"></textarea>
+    </div>
+    </div>
+    <div class="form-group" id="book-holder">
+        <input type="submit" value="Book" id="book"> 
+    </div>
+    </form>
     </div>
     <div id="footer">
         <h4>
